# GoldTester

./: .gitignore  CLAUDE.md  LIMIT_ORDER_IMPLEMENTATION.md  README.md  backtest_config.yaml  fake_stock_data.csv  pyproject.toml  requirements.txt
backtest/: __init__.py  accounting.py  backtest_types.py  data_loader.py  execution.py  html_templates.py  metrics.py  orders.py  reporting.py  risk.py  run.py  signals.py  types.py  utils.py
scripts/: get_date_range.py  get_sample.py
strategies/: limit_order_example.py  market_sentiment.py  my_signal.py
tests/: integration_test.py  test_config.yaml
tests/data/: fake_100_stock_20240101_20240601.csv  fake_data_generator.py
tests/test_runs/: stop_risk_example.yaml
tests/test_runs/first_test_run/: ema_trading.py  test_config.yaml
tests/test_runs/limit_order_test/: limit_order_test.yaml
tests/test_runs/sentiment_based/: sentiment_config.yaml
tests/unit/: test_limit_orders.py
tests/utlis/: trading_day_test.py
